# Sistema_de_Recomendaciones

./: CMakeLists.txt  README.md  resources.qrc  styles.qss  styles_light.qss
img/: descarga_imagenes.txt
include/: Filtrar_Precios.h  arbol_usuarios.h  dialogo_registro_nuevo.h  filtrar_descripcion.h  filtros.h  lista_productos.h  nodo_string.h  perfil_usuario.h  preferencias_dialogo.h  preferencias_producto.h  producto.h  recomendaciones.h  registro_dialog.h  ventana_inicial.h  ventana_perfil.h  ventana_principal.h
src/: arbol_usuarios.cpp  dialogo_registro_nuevo.cpp  filtros.cpp  main.cpp  nodo_string.cpp  preferencias_dialogo.cpp  recomendaciones.cpp  registro_dialog.cpp  test_filtros.cpp  ventana_inicial.cpp  ventana_perfil.cpp  ventana_principal.cpp
